removed some depricated exec left